# ollama-serve

./: .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  python-api.html  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: publish-docs.yml  run-tests.yml
_modules/: index.html
_modules/ollama_serve/: main.html
docs/src/: conf.py  python-api.md
src/ollama_serve/: __init__.py  cli.py  main.py
tests/: conftest.py  test_main.py
